# NOICE

./: README.md  noice_req.txt  pyproject.toml
codes/: Nicer_Pointing.py  cusp_location_qudsi.py  figure_setup.py  get_sw_params.py  nicer_pointing_qudsi.py
data/4202470103/auxil/: ni4202470103.cat
data/4202470103/log/: ni4202470103_errlog.html  ni4202470103_joblog.html
data/4202470103/xti/event_cl/: ni4202470103_0mpu7_cl.evt
data/NICER_obs_orbit/: ni4202470103.orb  ni4202470104.orb
