[tool.poetry]
name = "noice"
version = "0.0.1"
description = "NICER Outflow of Ions and the Cusp Experiment"
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
geopack = "^1.0.9"
pyspedas = "^1.3.0"
tabulate = "^0.8.9"
pytplot = "^1.7.28"
h5py = "^3.6.0"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
DateTime = "^4.4"
scipy = "^1.8.0"
scikit-image = "^0.19.1"
astropy = "^5.0.4"
pyqtgraph = "0.12.2"
PyQt5 = "5.15.6"
PyQt5-Qt5 = "5.15.2"
PyQt5-sip = "12.9.0"
PyQtWebEngine = "5.15.5"
PyQtWebEngine-Qt5 = "5.15.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
